--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="Folder_name">Folder name</string>
     <string name="duration">00.00</string>
     <string name="image">Image</string>
-
+    <string name="welcome">Welcome!!</string>
 
 
 </resources>
